[package]
name = "plumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
git2 = "0.18.3"
home = "0.5.9"
serde = { version = "1.0.202", features = ["serde_derive"] }
thiserror = "1.0.61"
