[package]
name = "plumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
config = "0.14.0"
git2 = "0.18.3"
home = "0.5.9"
notify = "6.1.1"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["fs", "io-std", "io-util", "tokio-macros", "rt-multi-thread", "test-util", "macros"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["test-util"] }
